redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: trakzee-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
        command: ["redis-server"]
        args: ["--requirepass", "Trakzee@2024"]
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: trakzee-test
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  clusterIP: None
