tomcat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  namespace: trakzee-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: tomcat:9.0-jdk11-openjdk-slim
        ports:
        - containerPort: 8080
        command: ["/bin/bash", "-c"]
        args:
          - |
            echo '<html><body><h1>Trakzee Tomcat Pod</h1><p>Host: '$(hostname)'</p></body></html>' > /usr/local/tomcat/webapps/ROOT/index.html
            catalina.sh run
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  namespace: trakzee-test
spec:
  selector:
    app: tomcat
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
